# ark-rust-kernel

./: .gdbinit  Cargo.toml  _build.rs  build.rs  paging_debug.py  qemu.dtb
.cargo/: config.toml
src/: config.rs  kernel.ld  main.rs
src/core/: interrupt_safe_cell.rs  intrlock.rs  mod.rs  mutex.rs  spinlock.rs
src/cpu/: mod.rs  vendor.rs
src/device/: console.rs  mod.rs  pipe.rs  timer.rs
src/device/virtio/: block.rs  mod.rs
src/filesystem/: fatfs.rs  fatfs_no.rs  mod.rs  vfs.rs
src/init/: init_binary.rs  mod.rs
src/interrupt/: mod.rs  plic.rs  trap.S  trap.rs
src/memory/: address.rs  mod.rs  page_allocator.rs  paging.rs
src/process/: aux_.rs  condvar.rs  mod.rs  pid.rs  process.rs  process_memory.rs  switch.S  task.rs
src/startup/: mod.rs  startup.S
src/syscall/: custom.rs  dummy.rs  error.rs  file.rs  id.rs  io.rs  memory.rs  mod.rs  process.rs  utils.rs
src/syscall/c/: mod.rs  syscall_id.h
src/utils/: error.rs  fixed_bitset.rs  logger.rs  mod.rs  panic.rs  print.rs
