[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "^0.4.21"
volatile = "0.5.1"
buddy_system_allocator = "0.9.1"
bitflags = "2.4.2"
intrusive-collections = "0.9.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
xmas-elf = "0.9.1"
num-derive = "0.4.2"
num-traits = { version = "0.2.18", features = ["libm"], default-features = false }
fatfs = { version = "0.4", default-features = false, git = "https://github.com/rafalh/rust-fatfs" }

# My own crate
user = { path = "../user" }

#[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "^0.11.1"
sbi = "^0.2.0"
fdt = "0.1.5"

[build-dependencies]
chrono = "0.4.35"

# Use panic=abort to disable unwinding of panic and reduce binary size, therefore eh_personality is not required.
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
